INTYGFV-15912: Use map structure when converting.